--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             </div>
           </div>
         </div>
+       </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
             <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
@@ -132,6 +133,7 @@
               <button class="btn btn-warning">Bye Now >></button>
             </div>
           </div>
+         </div>
         </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
